# Cortex

./: .gitignore  CMakeLists.txt  README.md  main.cpp
core/LOB/: LimitOrder.cpp  LimitOrder.h  LimitOrderBook.cpp  LimitOrderBook.h  LimitPrice.cpp  LimitPrice.h
core/User/: Portfolio.cpp  Portfolio.h
core/engine/: CortexEngine.cpp  CortexEngine.h
core/logging/: Logger.cpp  Logger.h  Message.cpp  Message.h
